--- a/mytinymuduo/mytinymuduo.vcxproj
+++ b/mytinymuduo/mytinymuduo.vcxproj
@@ -76,26 +76,68 @@
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros" />
   <ItemGroup>
+    <ClInclude Include="Acceptor.h" />
+    <ClInclude Include="AsyncLogger.h" />
+    <ClInclude Include="Buffer.h" />
+    <ClInclude Include="Callback.h" />
+    <ClInclude Include="Channel.h" />
     <ClInclude Include="CurrentThread.h" />
+    <ClInclude Include="EPollPoller.h" />
+    <ClInclude Include="EventLoop.h" />
+    <ClInclude Include="EventLoopThread.h" />
+    <ClInclude Include="EventLoopThreadPool.h" />
     <ClInclude Include="FileUtil.h" />
     <ClInclude Include="FixedBuffer.h" />
+    <ClInclude Include="HttpContext.h" />
+    <ClInclude Include="HttpRequest.h" />
+    <ClInclude Include="HttpResponse.h" />
+    <ClInclude Include="HttpServer.h" />
+    <ClInclude Include="InetAddress.h" />
     <ClInclude Include="LogFile.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="LogStream.h" />
+    <ClInclude Include="MemoryPool.h" />
     <ClInclude Include="noncopyable.h" />
+    <ClInclude Include="Poller.h" />
+    <ClInclude Include="PollPoller.h" />
+    <ClInclude Include="Socket.h" />
+    <ClInclude Include="TcpConnection.h" />
+    <ClInclude Include="TcpServer.h" />
     <ClInclude Include="Thread.h" />
     <ClInclude Include="ThreadPool.h" />
+    <ClInclude Include="Timer.h" />
+    <ClInclude Include="TimerQueue.h" />
     <ClInclude Include="Timestamp.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Acceptor.cpp" />
+    <ClCompile Include="AsyncLogger.cpp" />
+    <ClCompile Include="Buffer.cpp" />
+    <ClCompile Include="Channel.cpp" />
     <ClCompile Include="CurrentThread.cpp" />
+    <ClCompile Include="DefaultPoller.cpp" />
+    <ClCompile Include="EPollPoller.cpp" />
+    <ClCompile Include="EventLoop.cpp" />
+    <ClCompile Include="EventLoopThread.cpp" />
+    <ClCompile Include="EventLoopThreadPool.cpp" />
     <ClCompile Include="FileUtil.cpp" />
+    <ClCompile Include="HttpContext.cpp" />
+    <ClCompile Include="HttpResponse.cpp" />
+    <ClCompile Include="HttpServer.cpp" />
+    <ClCompile Include="InetAddress.cpp" />
     <ClCompile Include="LogFile.cpp" />
     <ClCompile Include="Logger.cpp" />
     <ClCompile Include="LogStream.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MemoryPool.cc" />
+    <ClCompile Include="PollPoller.cpp" />
+    <ClCompile Include="Socket.cpp" />
+    <ClCompile Include="TcpConnection.cpp" />
+    <ClCompile Include="TcpServer.cpp" />
     <ClCompile Include="Thread.cpp" />
     <ClCompile Include="ThreadPool.cpp" />
+    <ClCompile Include="Timer.cpp" />
+    <ClCompile Include="TimerQueue.cpp" />
     <ClCompile Include="Timestamp.cpp" />
   </ItemGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
